--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "serve": "http-server www"
   },
   "devDependencies": {
     "@stencil/core": "^1.12.2",
     "@stencil/router": "^1.0.1",
-    "@stencil/sass": "^1.3.2"
+    "@stencil/sass": "^1.3.2",
+    "workbox-build": "4.3.1"
   },
-  "license": "MIT",
+  "license": "Commercial",
   "dependencies": {
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.18",
