--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "Stencil App Starter",
   "scripts": {
-    "build": "node prebuild.js && stencil build",
+    "build": "node prebuild.js && stencil build --prerender",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
@@ -12,11 +12,13 @@
     "serve": "http-server www"
   },
   "devDependencies": {
-    "@stencil/core": "^1.12.2",
+    "@stencil/core": "^1.16.0-0",
     "@stencil/router": "^1.0.1",
     "@stencil/sass": "^1.3.2",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "sharp": "^0.25.4",
-    "workbox-build": "4.3.1"
+    "workbox-build": "4.3.1",
+    "log4js": "^6.3.0"
   },
   "license": "Commercial",
   "dependencies": {
