--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@stencil/sass": "^1.3.2",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "sharp": "^0.25.4",
-    "workbox-build": "4.3.1",
-    "log4js": "^6.3.0"
+    "workbox-build": "4.3.1"
   },
   "license": "Commercial",
   "dependencies": {
